@@ -1,3 +1,14 @@
+2013-09-20  Csaba Osztrogonác  <ossy@webkit.org>
+
+        Add covariant RenderElement* Element::renderer()
+        https://bugs.webkit.org/show_bug.cgi?id=121638
+
+        Unreviewed buildfix after r156144.
+
+        * DOMCoreClasses.cpp:
+        (DOMElement::boundingBox):
+        (DOMElement::font):
+
 2013-09-18  Brent Fulgham  <bfulgham@apple.com>
 
         [Windows] Build fix after r156063.
